--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "leaflet": "^1.8.0",
-    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "^18.2.0",
-    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "0.9.5"
   },
@@ -31,6 +27,10 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.5.19"
+    "@types/leaflet": "^1.7.11",
+    "leaflet": "^1.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.0.0"
   }
 }
