--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-leaflet/core": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "leaflet-search": "^3.0.2",
     "react-bootstrap": "^1.5.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "0.9.5"
@@ -15,7 +16,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  
   "devDependencies": {
     "leaflet": "^1.8.0",
     "react": "^18.2.0",
