--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@react-leaflet/core": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.1",
     "leaflet-search": "^3.0.2",
+    "neo4j-driver": "^4.4.6",
+    "pg": "^8.7.3",
     "react-bootstrap": "^1.5.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "0.9.5"
