--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-leaflet/core": "^2.0.0",
     "bootstrap": "^5.1.3",
+    "cdbreact": "^1.5.3",
     "dotenv": "^16.0.1",
     "leaflet-search": "^3.0.2",
     "neo4j-driver": "^4.4.6",
