--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.17",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "@react-leaflet/core": "^2.0.0",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
@@ -14,6 +17,8 @@
     "neo4j-driver": "^4.4.6",
     "pg": "^8.7.3",
     "react-bootstrap": "^1.5.2",
+    "react-icons": "^4.8.0",
+    "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1"
   },
