--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@react-leaflet/core": "^2.0.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
     "dotenv": "^16.0.1",
@@ -46,5 +47,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:5000/"
 }
