profile page UI updated

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@react-leaflet/core": "^2.0.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
     "dotenv": "^16.0.1",
     "leaflet-search": "^3.0.2",
+    "lrm-google": "^1.0.1",
     "neo4j-driver": "^4.4.6",
     "pg": "^8.7.3",
     "react-bootstrap": "^1.5.2",
+    "react-geolocated": "^4.0.3",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.4",
