--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-bootstrap": "^1.5.2",
     "react-geolocated": "^4.0.3",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
     "react-multi-carousel": "^2.8.2",
-    "react-router-dom": "^6.4.4",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "^5.0.1",
+    "rehype-raw": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000/"
+  "proxy": "http://localhost:5000/"
 }
