--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "cdbreact": "^1.5.3",
     "dotenv": "^16.0.1",
+    "firebase": "^9.22.0",
     "leaflet-search": "^3.0.2",
     "lrm-google": "^1.0.1",
     "neo4j-driver": "^4.4.6",
