--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "type": "module"
 }
