--- a/package.json
+++ b/package.json
@@ -53,6 +53,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
-  "type": "module"
+  "proxy": "http://localhost:5000/"
 }
